cambios en el h2

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>JAVA SCRIPT</title>
 </head>
 <body>
-  <h1>Preentrega 2</h1>
-  <h2>Simulador interactivo de venta de electrodomesticos</h2>
+    <h1>Preentrega 2</h1>
+    <h2>Simulador interactivo de venta de electrodomesticos.</h2>
   
   
 
 
 
-  <script src=".//main.js"></script>
+    <script src=".//main.js"></script>
 </body>
 </html>
